<resources>
    <string name="app_name">jhuPool</string>

    <!-- arrow (to select options) -->
    <string name="arrow"> > </string>

    <!-- save -->
    <string name="save">Save</string>

    <!-- buttons -->
    <string name="find_ride_tab">FIND RIDE</string>
    <string name="find_ride">FIND RIDE</string>

    <!-- main options -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Depart</string>
    <string name="time">Time</string>
    <string name="riders">Riders</string>
    <string name="notes">Notes</string>

    <!-- locations (to/from) -->
    <string name="loc_homewood">Homewood</string>
    <string name="loc_bwi">BWI</string>
    <string name="loc_tj">Trader Joe\'s</string>
    <string name="loc_wf">Whole Foods</string>
    <string name="loc_hm">HMart</string>
    <string name="loc_special">Hampdenfest</string>

    <!-- num of riders -->
    <string name="increment"> + </string>
    <string name="decrement"> — </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="verify">Verify</string>
    <string name="hint"><font size="13">JHED</font></string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Settings Strings -->
    <string name="notifications">Notifications</string>
    <string name="jhed">JHED</string>
    <string name="facebook">Facebook</string>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">1899802366954291</string>
    <string name="account_kit_client_token">35e458bd10493ff107f068837013d582</string>
    <string name="ak_login_protocol_scheme">akFACEBOOK_APP_ID</string>
</resources>
