<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_ride"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.viv2d2.findride.FindRideActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- FROM -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/from"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:paddingLeft="30dp"
                android:id="@+id/from_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="from"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:id="@+id/from_input"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="from"
                android:layout_weight="1" />

            <TextView
                android:text="@string/arrow"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/from_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="from"/>

        </LinearLayout>

        <!-- TO -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/to"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/to_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:onClick="to"
                android:paddingLeft="30dp"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/to_input"
                android:background="@color/colorAccent"
                android:onClick="to"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:layout_weight="1" />

            <TextView
                android:text="@string/arrow"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/to_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="from"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- DATE -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/date"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/date_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:paddingLeft="30dp"
                android:onClick="date"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/date_input"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="date"
                android:layout_weight="1" />

            <TextView
                android:text="@string/arrow"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/date_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="date"/>
        </LinearLayout>

        <!-- TIME -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/time"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/time_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:paddingLeft="30dp"
                android:onClick="time"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/time_input"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="time"
                android:layout_weight="1" />

            <TextView
                android:text="@string/arrow"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/time_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="time"/>
        </LinearLayout>

        <!-- RIDERS -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/riders"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/riders_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:paddingLeft="30dp"
                android:textAlignment="viewStart" />

            <TextView
                android:text="@string/decrement"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:id="@+id/riders_decrement"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="decrementRiders"
                android:textStyle="bold" />


            <TextView
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:id="@+id/riders_input"
                android:background="@color/colorAccent"
                android:gravity="center|center_vertical"
                android:textAlignment="center"/>


            <TextView
                android:text="@string/increment"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:id="@+id/riders_increment"
                android:background="@color/colorAccent"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="incrementRiders"
                android:textStyle="bold" />


            <TextView
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:id="@+id/riders_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- NOTES -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/notes_title"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:text="@string/notes"
                android:paddingLeft="30dp"
                android:onClick="notes"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/notes_input"
                android:background="@color/colorAccent"
                android:gravity="start|center_vertical"
                android:textAlignment="viewStart"
                android:onClick="notes"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/arrow"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/notes_arrow"
                android:background="@color/colorAccent"
                android:paddingRight="30dp"
                android:gravity="end|center_vertical"
                android:textAlignment="viewEnd"
                android:onClick="notes"/>
        </LinearLayout>

    </LinearLayout>


    <!-- CALL ACTION METHOD -->
    <!-- action = 0 (create), 1 (join), 2 (leave) -->
    <Button
        android:id="@+id/find_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/find_ride_tab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="launchResults"/>

</RelativeLayout>
