<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Notifications -->
    <TextView
        android:text="@string/notifications"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:id="@+id/notifications_title"
        android:background="@color/colorAccent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="start|center_vertical"
        android:paddingLeft="30dp"
        android:textAlignment="viewStart" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:id="@+id/notifications_input"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/notifications_title"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart" />

    <Switch
        android:text="ON/OFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:id="@+id/switch_notifications"
        android:layout_alignRight="@+id/notifications_input"
        android:paddingTop="5dp"
        android:gravity="center"/>
    <!-- figure out how to center button without dp -->
    <!-- JHED -->
    <TextView
        android:text="@string/jhed"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:id="@+id/jhed_title"
        android:background="@color/colorAccent"
        android:gravity="start|center_vertical"
        android:paddingLeft="30dp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/notifications_title"
        android:layout_marginTop="35dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:id="@+id/jhed_input"
        android:background="@color/colorAccent"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        android:layout_below="@id/notifications_input"
        android:layout_toRightOf="@+id/jhed_title"
        android:layout_marginTop="35dp" />


    <!-- Facebook -->
    <TextView
        android:text="@string/facebook"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:id="@+id/facebook_title"
        android:background="@color/colorAccent"
        android:gravity="start|center_vertical"
        android:paddingLeft="30dp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/jhed_title"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:id="@+id/facebook_input"
        android:background="@color/colorAccent"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        android:layout_below="@id/jhed_input"
        android:layout_toRightOf="@+id/jhed_title"
        />


</RelativeLayout>